Add postStartCommand to run Python script automatically

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,13 +6,13 @@
             "version": "latest"
         }
     },
-    "postStartCommand": "python3 /workspwaces/ww/sahil.py",
+    "postStartCommand": "python3 /workspwaces/www/sahil.py",
     "customizations": {
         "vscode": {
             "settings": {
                 "python.pythonPath": "/usr/local/bin/python"
             },
-            "extensions": [
+            "extensions"
                 "ms-python.python"
             ]
         }
